[package]
name = "rustboard-server"
version = "0.1.0"
authors = ["William Chargin <wchargin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
crc = "1.8.1"
futures-core = "0.3.6"
futures-util = "0.3.6"
parking_lot = "0.11.0"
prost = "0.6.1"
rand = "0.7.3"
rand_chacha = "0.2.2"
tokio = { version = "0.2.22", features = ["macros"] }
tonic = "0.3.1"
walkdir = "2.3.1"

[build-dependencies]
tonic-build = "0.3.1"

[[bin]]
name = "rustboard"
path = "src/main.rs"
